--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <img src="./photo3.jpg" alt="photo3" class="photo3">
         <div class="text">
-            <h1>Have a Blessed Birthday!</h1>
+            <p>Have a Blessed Birthday!</p>
             <p>my dearest design partner, hope you have the greatest year ever! God bless you abundantly.</p>
 
         <img src="aa.jpg" alt="aa" class="aa">
         <div class="text">
-            <h2>May He grant your heart’s desires
-                and make all your plans succeed.</h2>
+            <p>May He grant your heart’s desires
+                and make all your plans succeed.</p>
             <p>Psalms 20:4</p>
         </div>
         <img src="bb.jpg" alt="bb" class="bb">
