--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         <img src="./photo3.jpg" alt="photo3" class="photo3">
         <div class="text">
             <p>Have a Blessed Birthday!</p>
-            <p>my dearest design partner, hope you have the greatest year ever! God bless you abundantly.</p>
+            <p>my dearest design partner,</p>
+            <p>wish u the greatest year ever!</p>
+            <p>God bless you abundantly.</p>
 
         <img src="aa.jpg" alt="aa" class="aa">
         <div class="text">
-            <p>May He grant your heart’s desires
-                and make all your plans succeed.</p>
+            <p>May He grant your heart’s desires</p>
+            <p>and make all your plans succeed.</p>
             <p>Psalms 20:4</p>
         </div>
         <img src="bb.jpg" alt="bb" class="bb">
